# goit_ds_homeworks

./: OverfittingHomeWork.ipynb  data_salary.csv  hw1_4.ipynb  hw1_6.ipynb  hw1_add_4.ipynb  hw2_1.ipynb  hw2_3.ipynb  hw2_5.ipynb  hw3_5.ipynb  hw3_6.ipynb  hw_10.ipynb  hw_10_add.ipynb  hw_11.ipynb  hw_12.ipynb  hw_13.ipynb  hw_13_vgg16.ipynb  hw_14.ipynb  hw_15.ipynb  hw_8.ipynb  hw_9.ipynb  main.ipynb  model_app.py  pyproject.toml
streamlit_files/: history_cnn.npy  history_vgg.npy
