[project]
name = "module16-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Renata",email = "renatavel4@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
